--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ a {
 a:hover {
   text-decoration: underline;
   opacity: 1;
-  color: #6315ffb7;
+  color: #37089bb7;
 }
 
 li {
@@ -207,6 +207,7 @@ button:hover {
   text-align: center;
   border: none;
   color: #243e63;
+  display: none;
 }
 
 .menu__backdrop {
@@ -294,8 +295,8 @@ button:hover {
   height: 1.5rem;
   width: 1.5rem;
   border: 1px solid gray;
-    border-radius: 50px;
-    padding: 4px;
+  border-radius: 50px;
+  padding: 4px;
 }
 
 .service__img--wrapper {
@@ -305,7 +306,6 @@ button:hover {
   padding: 1.25rem;
   text-align: center;
 }
-
 
 .features__wrapper {
   display: flex;
@@ -529,7 +529,11 @@ PLANS
   border-radius: 4px;
 }
 .plans__second--child {
-  background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+  background: linear-gradient(
+    135deg,
+    rgb(76, 81, 191) 0%,
+    rgb(102, 126, 234) 100%
+  );
 }
 
 .plans__third--child {
@@ -554,7 +558,7 @@ PLANS
 
 .plans__btn--second {
   background-color: white;
-  color:#6415ff;
+  color: #6415ff;
   font-weight: 700;
 }
 
@@ -643,6 +647,42 @@ TESTIMONIALS
   margin: 12px 4px 12px 4px;
   border-right-width: 1px;
   opacity: 0.5;
+}
+
+/* 
+
+QUESTION
+
+*/
+.question__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.question__subheader {
+  margin-top: 1.25rem;
+  border-radius: 12px;
+  background-color: #edf2f7;
+  padding: 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 800px;
+}
+
+.subheader__ifont {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.question__h3 {
+  font-size: 18px;
+}
+
+.question__p {
+  margin-bottom: 64px;
 }
 
 /* 
@@ -775,6 +815,10 @@ SMALL PHONES, TABLETS, LARGE SMARTPHONES
     display: none;
   }
 
+  .btn__menu {
+    display: flex;
+  }
+
   h2 {
     font-size: 30px;
   }
@@ -782,7 +826,7 @@ SMALL PHONES, TABLETS, LARGE SMARTPHONES
     margin-bottom: 24px;
   }
   .fortune__p {
-    font-size: 16px; 
+    font-size: 16px;
   }
   .fortune__page {
     flex-direction: column;
@@ -790,7 +834,7 @@ SMALL PHONES, TABLETS, LARGE SMARTPHONES
     text-align: left;
   }
 
-  .fortune__wrapper{
+  .fortune__wrapper {
     width: 100%;
     max-width: 600px;
     padding: 0px 60px;
@@ -803,48 +847,70 @@ SMALL PHONES, TABLETS, LARGE SMARTPHONES
   STEPS
   
   */
-    .steps__header1 {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
+  .steps__header1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    .steps__header2 {
-      width: 100%;
-      max-width: 345px;
-    }
+  .steps__header2 {
+    width: 100%;
+    max-width: 345px;
+  }
 
-    h1 {
-      font-size: 36px;
-    }
+  h1 {
+    font-size: 36px;
+  }
 
-    h3 {
+  h3 {
     font-size: 18px;
-    }
+  }
 
-    /* VALUES */
+  /* FEATURES */
+  .service {
+    width: calc(100% / 2);
+  }
 
-    p {
-      font-size: 16px;
-    }
+  /* VALUES */
+
+  p {
+    font-size: 16px;
+  }
 
   /* 
 
   PLANS
 
    */
-   .plans__wrapper {
+  .plans__wrapper {
     flex-direction: column;
     align-items: center;
-   }
-   .plans__first--child,
-   .plans__second--child,
-   .plans__third--child {
+  }
+  .plans__first--child,
+  .plans__second--child,
+  .plans__third--child {
     margin-top: 24px;
     border-right: 1px solid #a0aec0;
     border-left: 1px solid #a0aec0;
     width: 600px;
-   }
+  }
+
+  /* TESTIMONIALS */
+  .second__img--container {
+    width: 65px ;
+    display: flex;
+    align-items: center;
+  }
+
+  .testimonials__btn--wrapper {
+    padding: 40px 20px;
+
+  }
+
+  .testimonials__p {
+    margin: 4px 0px;
+  }
+
 }
 
 /* 
@@ -858,101 +924,105 @@ SMALL PHONES, LARGE SMARTPHONES
     display: none;
   }
 
+
   /* FEATURES */
 
-    .features__wrapper {
-      text-align: center;
-    }
+  .features__wrapper {
+    text-align: center;
+  }
 
-    h3 {
-      font-size: 12px;
-    }
+  .service {
+    width: calc(100% / 2);
+  }
 
-    .service__p {
-      font-size: 8px
-    }
+  h3 {
+    font-size: 14px;
+  }
 
-    /* QUALITY */
+  .service__p {
+    font-size: 10px;
+  }
 
-    .quality__wrapper {
-      flex-direction: column;
-      align-items: center;
-    }
+  /* QUALITY */
 
-    .quality__header2 {
-      margin-top: 24px;
-    }
+  .quality__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .quality__header1,
-    .quality__header2 {
-      width: 100%;
-      text-align: center;
-    }
-    .quality__btn {
-      width: 100%;
-      max-width: 160px;
-      margin-left: 160px;
-    }
+  .quality__header2 {
+    margin-top: 24px;
+  }
 
-    /* STEPS */
+  .quality__header1,
+  .quality__header2 {
+    width: 100%;
+    text-align: center;
+  }
+  .quality__btn {
+    width: 100%;
+    max-width: 160px;
+    margin-left: 160px;
+  }
 
-    .steps__wrapper {
-      flex-direction: column;
-      align-items: center;
-    }
+  /* STEPS */
 
-    .steps__header1 {
-      width: 100%;
-    }
+  .steps__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .steps__header2 {
-      margin-top: 44px;
-    }
+  .steps__header1 {
+    width: 100%;
+  }
 
-    .steps__list {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+  .steps__header2 {
+    margin-top: 44px;
+  }
 
-    h1 {
-      font-size: 28px;
-    }
+  .steps__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    /* VALUES */
+  h1 {
+    font-size: 28px;
+  }
 
-    .values__wrapper {
-      display: flex;
-      flex-direction: column-reverse;   
-      align-items: center;
-      text-align: center;
-    }
-    .values__header2 {
-      margin-bottom: 64px;
-    }
+  /* VALUES */
 
-    .values__header1,
-    .values__header2 {
-      width: 100%;
-    }
+  .values__wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+  }
+  .values__header2 {
+    margin-bottom: 64px;
+  }
 
-    .values__column {
-      flex-direction: column;
-      text-align: center;
-      width: 100%; 
-    }
+  .values__header1,
+  .values__header2 {
+    width: 100%;
+  }
+
+  .values__column {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
 
   /* PLANS */
 
   .plans__first--child,
   .plans__second--child,
   .plans__third--child {
-   margin-top: 24px;
-   border-right: 1px solid #a0aec0;
-   border-left: 1px solid #a0aec0;
-   width: 100%;
+    margin-top: 24px;
+    border-right: 1px solid #a0aec0;
+    border-left: 1px solid #a0aec0;
+    width: 100%;
   }
-
 
   /* TESTIMONIALS */
 
@@ -966,6 +1036,15 @@ SMALL PHONES, LARGE SMARTPHONES
   .testimonials__header2 {
     width: 100%;
   }
+  /* QUESTIONS */
+   .question__h3 {
+    font-size: 16px;
+   }
+   
+   .question__p {
+    text-align: center;
+   }
+
 
   /* DEVELOPER */
 
@@ -975,7 +1054,6 @@ SMALL PHONES, LARGE SMARTPHONES
     text-align: center;
     align-items: center;
   }
-
 
   .developer__header,
   .developer__header--button {
@@ -988,7 +1066,7 @@ SMALL PHONES, LARGE SMARTPHONES
   }
 
   .developer__h2 {
-    font-size: 16px
+    font-size: 16px;
   }
 
   /* FOOTER */
@@ -1002,5 +1080,67 @@ SMALL PHONES, LARGE SMARTPHONES
   .footer__links--wrapper {
     width: 100%;
   }
-  
 }
+
+@media (max-width: 480px) {
+  /* FEATURES */
+
+
+  .service {
+    display: flex;
+    width: 100%;
+    padding: 8px;
+    display: flex;
+    justify-content:center
+  }
+
+  .service__header {
+    width: 60%;
+  }
+
+  .service__img--wrapper {
+    padding: 16px;
+  }
+
+  .service__p {
+    font-size: 12px
+  }
+
+  /* QUALITY */
+
+  .quality__btn {
+    margin-left: 100px;
+  }
+
+  p {
+    font-size: 12px;
+  }
+
+  /* TESTIMONIALS */
+
+  .testimonials__p {
+    font-size: 14px;
+  }
+
+  /* FOOTER */
+  .footer__lists {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer__logo--img {
+    margin-right: 24px;
+    font-size: 14px;
+  }
+
+  .footer__btn {
+  }
+
+
+
+}
+
+
+
+
